Clamp focus ring opacity to avoid debug-mode failures

BUG=706668

Review-Url: https://codereview.chromium.org/2789623004
Cr-Commit-Position: refs/heads/master@{#460951}

Former-commit-id: 9a31be0e1cc31d7aba42d5131ce5621d589a07e6